# IndoorRobotSimulation

./: README.md
robot_remould/: kobuki_hexagons_hokuyo.urdf.xacro  turtlebot_world.launch
robot_remould/urdf/: turtlebot_gazebo.urdf.xacro  turtlebot_library.urdf.xacro
robot_remould/urdf/sensors/: hokuyo.urdf.xacro
ros_maps/: square_hall.pgm  square_hall.yaml
scripts/: go_to_specific_point_on_map.py  goforward.py
src/: .rosinstall  .rosinstall.bak
src/dstar/: CMakeLists.txt  bgp_plugin.xml  package.xml
src/dstar/include/dstar_global_planner/: dstar_global_planner.h
src/dstar/include/dstar_global_planner/pathSplineSmoother/: pathSplineSmoother.cpp  pathSplineSmoother.h  realPoint.h
src/dstar/src/: Dstar.cpp  Dstar.cpp~  dstar_global_planner.cpp
src/navigation/move_base/src/: move_base.cpp
src/relaxed_astar/: CMakeLists.txt  README  package.xml  relaxed_astar_planner_plugin.xml
src/relaxed_astar/src/: RAstar_ros.cpp  RAstar_ros.cpp~  RAstar_ros.h  RAstar_ros.h~
src/rplidar_ros/launch/: hector_mapping_demo.launch
src/rrt_exploration_tutorials/: CMakeLists.txt  README.md  package.xml
src/rrt_exploration_tutorials/launch/: mutliple_simulated_MTR.launch  mutliple_simulated_house.launch  mutliple_simulated_largeMap.launch  simple.launch  single_simulated_MTR.launch  single_simulated_house.launch  single_simulated_largeMap.launch  single_simulated_square_hall.launch
src/rrt_exploration_tutorials/launch/includes/: move_baseSafe.launch  robot.launch.xml
src/rrt_exploration_tutorials/launch/includes/rviz_config/: single.rviz
src/rrt_exploration_tutorials/launch/includes/urdf/: kobuki_gazebo.urdf.xacro
src/rrt_exploration_tutorials/launch/includes/worlds/: square_hall.world
src/rrt_exploration_tutorials/param/: costmap_common_params.yaml  local_costmap_params.yaml
src/rrt_planner/: CMakeLists.txt  package.xml  rrt_planner_plugin.xml
src/rrt_planner/src/: inspire_rrt_planner.h  rrt.h  rrt_planner.cpp
