<?xml version="1.0"?>
<package>
  <name>dstar_global_planner</name>
  <version>0.0.1</version>
  <description>The dstar_global_planner package</description>

  <maintainer email="chushuifurong924@gmail.com">fuyuan yang</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_core</build_depend>

  <run_depend>nav_core</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>
    <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>


</package>
